2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'Bug 429025 - Code completion of 'base'
	  doesn't work'.

2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: fixed possible null references.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/MemberCompletionData.cs: Re-implement sinking obsolete members to
	  the bottom, but in a non-broken way this time.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
	  completion if no constructor'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431382 - Code
	  completion should strip Attribute suffix from classes deriving from
	  System.Attribute'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed possible null reference in
	  compare.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed 'Bug 430813 - Completion list
	  feels really broken when items are not sorted alphabetically'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs, Gui/CSharpAmbience.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: fixed
	  'Bug 431761 - Code completion is incorrect'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed +-1 error.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed possible null reference.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'base' bug.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: fixed 'Bug 432436 -